@@ -15,15 +15,14 @@ jar {
 
 javadoc.options {
     addBooleanOption('-enable-preview', true)
-    addStringOption('-release', '20')
-    addStringOption('-add-modules', 'jdk.incubator.concurrent')
+    addStringOption('-release', '21')
 }
 
 group 'org.sun.ghosh.dependencyManagement'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_20
-targetCompatibility = JavaVersion.VERSION_20
+sourceCompatibility = JavaVersion.VERSION_21
+targetCompatibility = JavaVersion.VERSION_21
 
 ext {
     javaMainClass = "org.sun.ghosh.dependencyManagement.MyApp"
@@ -31,7 +30,7 @@ ext {
 
 application {
     mainClassName = javaMainClass
-    applicationDefaultJvmArgs = ["--enable-preview", '--add-modules', 'jdk.incubator.concurrent']
+    applicationDefaultJvmArgs = ["--enable-preview"]
 }
 
 jar {
@@ -48,9 +47,7 @@ repositories {
 
 compileJava {
     options.compilerArgs.addAll(
-            ['--enable-preview',
-             '--add-modules', 'jdk.incubator.concurrent'
-            ])
+            ['--enable-preview'])
 }
 
 dependencies {}
