@@ -16,9 +16,7 @@ compileJava{
 
 compileJava {
     options.compilerArgs.addAll(
-            ['--enable-preview',
-             '--add-modules', 'jdk.incubator.concurrent'
-            ])
+            ['--enable-preview'])
 }
 
 ext {
@@ -27,12 +25,10 @@ ext {
 
 application {
     mainClassName = javaMainClass
-    applicationDefaultJvmArgs = ["--enable-preview", '--add-modules', 'jdk.incubator.concurrent']
+    applicationDefaultJvmArgs = ["--enable-preview"]
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
